[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
uring-reactor = { path = "crates/uring-reactor" }
uring-operation = { path = "crates/uring-operation" }
uring-adapter = { path = "crates/uring-adapter" }

local-fifo-executor = { path = "crates/local-fifo-executor" }
local-danger-cell = { path = "crates/local-danger-cell" }

io-uring = "0.6"
slab = "0.4"

noop-waker = "0.1"
async-task = "4"

libc = "0.2"
socket2 = "0.5"
