[package]
name = "local-fifo-executor"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[lints.clippy.new-without-default]
level = "allow"
priority = 1

[dependencies]
async-task = { workspace = true }
noop-waker = { workspace = true }
danger-cell = { workspace = true }
