[package]
name = "hyper-server"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[dependencies]
io-uring = { workspace = true }
uring-reactor = { workspace = true }
uring-adapter = { workspace = true, features = ["tokio-io"] }
uring-operation = { workspace = true }

local-fifo-executor = { workspace = true }

hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

clap = { version = "4", features = ["derive", "env"] }
